--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -62,7 +62,7 @@
       <dependency>
       	<groupId>com.hp.hpl.jena</groupId>
       	<artifactId>arq</artifactId>
-      	<version>2.8.6-SNAPSHOT</version>
+      	<version>2.8.7-RC-1</version>
       </dependency>
 
   </dependencies>
