--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -72,7 +72,7 @@
     <dependency>
     	<groupId>com.hp.hpl.jena</groupId>
     	<artifactId>jena</artifactId>
-    	<version>2.6.3</version>
+    	<version>2.6.4-RC-1</version>
     	<type>test-jar</type>
     	<scope>test</scope>
     </dependency>
