revised the URI scheme; collapsed advanced into quickstart; changed to sentence-case for headers.

--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 
   <servlet-mapping>
     <servlet-name>jersey</servlet-name>
-    <url-pattern>/exec/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
