--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project 
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" 
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,7 +14,7 @@
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>json-rdf</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <name>json-rdf</name>
 
   <dependencies>
@@ -24,11 +27,11 @@
       <scope>compile</scope>
     </dependency>
 
-      <dependency>
-      	<groupId>com.hp.hpl.jena</groupId>
-      	<artifactId>arq</artifactId>
-      	<version>2.8.7</version>
-      </dependency>
+    <dependency>
+    	<groupId>com.hp.hpl.jena</groupId>
+    	<artifactId>arq</artifactId>
+    	<version>2.8.7</version>
+    </dependency>
 
   </dependencies>
    <build>
