--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -9,12 +9,12 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${elda.version}</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>json-rdf</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>${elda.version}</version>
   <name>json-rdf</name>
 
   <dependencies>
