revised for versions

--- a/.hgignore
+++ b/.hgignore
@@ -23,3 +23,8 @@ syntax: regexp
 ^deliver-elda/delivery/.*
 ^deliver-elda/elda.jar
 ^deliver-elda/target
+
+syntax: regexp
+^deliver-elda/src/main/webapp/log4j\.properties$
+syntax: regexp
+^deliver-elda/elda-0\.9\.7\.jar$
