--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -1,10 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <artifactId>lda-top</artifactId>
+    <groupId>com.epimorphics.lda</groupId>
+    <version>0.9.8</version>
+  </parent>
+
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda</artifactId>
   <packaging>war</packaging>
-  <version>${elda.version}</version>
   <name>elda</name>
   <description>instant Elda webapp</description>
 
