--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>lda-top</artifactId>
+    <artifactId>deliver-elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
     <version>0.9.10</version>
   </parent>
