--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -6,9 +6,9 @@
 >
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>lda</artifactId>
+    <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>0.9.10</version>
+    <version>0.9.11-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
