--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -7,9 +7,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>json-rdf</artifactId>
+    <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>0.9.10</version>
+    <version>0.9.11-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
