--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>deliver-elda</artifactId>
+    <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>0.9.10</version>
+    <version>0.9.11-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
