--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>0.9.11</version>
+    <version>0.9.12-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
