--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-core</artifactId>
-      <version>1.3</version>
+      <version>1.6-ea04</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
-      <version>1.3</version>
+      <version>1.6-ea04</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
-      <version>1.3</version>
+      <version>1.6-ea04</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -70,7 +70,7 @@
     <dependency>
         <groupId>com.hp.hpl.jena</groupId>
         <artifactId>tdb</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.9</version>
         <type>jar</type>
     </dependency>
 
