--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.4</version>
+    <version>1.1.4c</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
