--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.4c</version>
+    <version>1.1.4d</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
