--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -12,6 +12,7 @@
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda</name>
+  <version>1.1.4d</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
@@ -38,7 +39,36 @@
             <artifactId>maven-jetty-plugin</artifactId>
             <groupId>org.mortbay.jetty</groupId>
         </plugin>
+        
+        <plugin>
+	        <!-- NOTE: We don't need a groupId specification because the group is
+	             org.apache.maven.plugins ...which is assumed by default.
+	         -->
+	        <artifactId>maven-assembly-plugin</artifactId>
+	        <version>2.2.1</version>
+	        <configuration>	
+	            <descriptors>
+	                <descriptor>src/assemble/distribution.xml</descriptor>
+	            </descriptors>
+	            <finalName>elda-standalone-${project.version}</finalName>
+	            <appendAssemblyId>false</appendAssemblyId>
+	            <archive>
+	                <manifestEntries>
+                        <Main-Class>cmd.run</Main-Class>
+                    </manifestEntries>
+	            </archive>
+	        </configuration>
+	        <executions>
+	            <execution>
+	                <phase>package</phase>
+	                <goals>
+	                    <goal>single</goal>
+	                </goals>
+	            </execution>
+	        </executions>
+        </plugin>
     </plugins>
+      
   </build>
 
 </project>
