--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,15 @@
     <pluginManagement>
       <plugins>
         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                  <source>1.6</source>
+                  <target>1.6</target>
+            </configuration>
+        </plugin>
       </plugins>
+      
     </pluginManagement>
 
     <extensions>
@@ -34,6 +35,24 @@
 	<version>1.0-beta-2</version>
       </extension>
     </extensions>
+    
+    <plugins>
+    
+        <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-javadoc-plugin</artifactId>
+	        <version>2.8</version>
+	        <executions>
+	            <execution>
+	                <phase>package</phase>
+	                <goals>
+	                    <goal>aggregate</goal>
+	                </goals>
+	            </execution>
+	        </executions>
+	    </plugin>
+    
+    </plugins>
 
   </build>
                                
@@ -124,12 +143,15 @@
         <url>http://download.java.net/maven/2/</url>
         <layout>default</layout>
     </repository>
+     
     <repository>
         <id>maven-repository.dev.java.net</id>
         <name>Java.net Maven 1 Repository (legacy)</name>
         <url>http://download.java.net/maven/1</url>
         <layout>legacy</layout>
     </repository>
+    
+     
     <repository>
       <id>repo-epi</id>
       <name>Epimorphics repository</name>
@@ -139,6 +161,7 @@
 	<enabled>true</enabled>
       </snapshots>
     </repository>
+    
 
   </repositories>
 
