--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -33,7 +33,8 @@
     </dependency>
 
   </dependencies>
-   <build>
+  <version>${elda.version}</version>
+  <build>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
@@ -46,6 +47,23 @@
            </execution>
          </executions>
       </plugin>
+      
+       <!--  create a source jar for use in aggregating javadoc -->
+          <plugin>
+		      <artifactId>maven-source-plugin</artifactId>
+		      <version>2.1.1</version>
+		      <executions>
+			      <execution>
+			          <id>bundle-sources</id>
+			          <phase>package</phase>
+			          <goals>
+			            <!-- produce source artifact for main project sources -->
+			              <goal>jar-no-fork</goal>
+			          </goals>
+			      </execution>
+		      </executions>
+	      </plugin>
+	      
     </plugins>
   </build>
 
