--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -111,6 +111,39 @@
 		          </execution>
 		        </executions>
           </plugin>
+          
+          <!--  create a source jar for use when aggregating javadoc -->
+          <plugin>
+		      <artifactId>maven-source-plugin</artifactId>
+		      <version>2.1.1</version>
+		      <executions>
+			      <execution>
+			          <id>bundle-sources</id>
+			          <phase>package</phase>
+			          <goals>
+			            <!-- produce source artifact for main project sources -->
+			              <goal>jar-no-fork</goal>
+			          </goals>
+			      </execution>
+		      </executions>
+	      </plugin>
+	      
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-javadoc-plugin</artifactId>
+	        <version>2.8</version> 
+	        <executions>
+	            <execution>
+	                <phase>prepare-package</phase>
+	                <goals>
+	                    <goal>javadoc</goal>
+	                </goals> 
+	                <configuration>
+	                    <quiet>true</quiet>
+	                </configuration>                       
+	            </execution>
+	        </executions>
+	    </plugin>
       </plugins>
   </build>
 </project>
