--- a/pom.xml
+++ b/pom.xml
@@ -38,20 +38,6 @@
     
     <plugins>
     
-        <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-javadoc-plugin</artifactId>
-	        <version>2.8</version>
-	        <executions>
-	            <execution>
-	                <phase>package</phase>
-	                <goals>
-	                    <goal>aggregate</goal>
-	                </goals>
-	            </execution>
-	        </executions>
-	    </plugin>
-    
     </plugins>
 
   </build>
@@ -143,23 +129,13 @@
         <url>http://download.java.net/maven/2/</url>
         <layout>default</layout>
     </repository>
-     
-    <repository>
-        <id>maven-repository.dev.java.net</id>
-        <name>Java.net Maven 1 Repository (legacy)</name>
-        <url>http://download.java.net/maven/1</url>
-        <layout>legacy</layout>
-    </repository>
     
-     
+    
+
     <repository>
-      <id>repo-epi</id>
-      <name>Epimorphics repository</name>
-      <layout>default</layout>
-      <url>http://www.epimorphics.com/maven2</url>
-      <snapshots>
-	<enabled>true</enabled>
-      </snapshots>
+        <id>codehaus.maven.repository</id>
+        <name>Codehaus Maven Respository</name>
+        <url>http://repository.codehaus.org/</url>
     </repository>
     
 
