Updated version numbers to conform to maven convention

--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.4d</version>
+    <version>1.1.4-RC4</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda</name>
-  <version>1.1.4d</version>
+  <version>1.1.4-RC4</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
