--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -8,13 +8,13 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.4d</version>
+    <version>1.1.4-RC4</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>lda</artifactId>
   <name>lda</name>  
-  <version>${elda.version}</version>
+  <version>1.1.4-RC4</version>
 
   <url>http://maven.apache.org</url>
 
