--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -145,6 +145,15 @@
 	            </execution>
 	        </executions>
         </plugin>
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+              <skip>true</skip>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
 
