--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,26 @@
   <build>
     <pluginManagement>
       <plugins>
+
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <executions>
+              <execution>
+                  <id>attach-javadocs</id>
+                  <goals> <goal>jar</goal> </goals>
+              </execution>
+          </executions>
+          <configuration> <encoding>UTF-8</encoding> </configuration>
+        </plugin>
+        
         <plugin>
         <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
       </plugins>
