--- a/.hgignore
+++ b/.hgignore
@@ -20,6 +20,7 @@ syntax: regexp
 ^lda/scratch/ian\.ttl$
 
 syntax: regexp
+^LOCAL/.*
 ^deliver-elda/delivery/.*
 ^deliver-elda/elda.jar
 ^deliver-elda/target
