--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>lda</artifactId>
-      <version>${elda.version}</version>
+      <version>${pom.version}</version>
     </dependency>
 
     <dependency>
@@ -39,14 +39,14 @@
     <dependency>
     	<groupId>com.epimorphics.lda</groupId>
     	<artifactId>lda</artifactId>
-    	<version>${elda.version}</version>
+    	<version>${pom.version}</version>
     	<classifier>sources</classifier>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.epimorphics.lda</groupId>
     	<artifactId>json-rdf</artifactId>
-    	<version>${elda.version}</version>
+    	<version>${pom.version}</version>
     	<type>jar</type>
     	<classifier>sources</classifier>
     	<scope>compile</scope>
@@ -128,7 +128,7 @@
 	            <descriptors>
 	                <descriptor>src/assemble/distribution.xml</descriptor>
 	            </descriptors>
-	            <finalName>elda-standalone-${elda.version}</finalName>
+	            <finalName>elda-standalone-${pom.version}</finalName>
 	            <appendAssemblyId>false</appendAssemblyId>
 	            <archive>
 	                <manifestEntries>
