--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0"?>
-<project 
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" 
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.5-SNAPSHOT</version>
+    <version>1.1.5</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
@@ -33,7 +29,7 @@
     </dependency>
 
   </dependencies>
-  <version>1.1.5-SNAPSHOT</version>
+  <version>1.1.5</version>
   <build>
      <plugins>
        <plugin>
