--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.5</version>
+    <version>1.1.6-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>lda</artifactId>
   <name>lda</name>  
-  <version>1.1.5</version>
+  <version>1.1.6-SNAPSHOT</version>
 
   <url>http://maven.apache.org</url>
 
