--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.6-SNAPSHOT</version>
+    <version>1.1.6</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
