--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda</name>
-  <version>1.1.6-SNAPSHOT</version>
+  <version>1.1.6</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
