--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -29,7 +29,7 @@
     </dependency>
 
   </dependencies>
-  <version>1.1.6-SNAPSHOT</version>
+  <version>1.1.6</version>
   <build>
      <plugins>
        <plugin>
