--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -10,7 +10,7 @@
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>lda</artifactId>
   <name>lda</name>  
-  <version>1.1.6-SNAPSHOT</version>
+  <version>1.1.6</version>
 
   <url>http://maven.apache.org</url>
 
