--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.7</version>
+    <version>1.1.7-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
@@ -25,11 +25,11 @@
     <dependency>
     	<groupId>com.hp.hpl.jena</groupId>
     	<artifactId>arq</artifactId>
-    	<version>2.8.9-20110706.140125-21</version>
+    	<version>2.8.9-20110714.092006-22</version>
     </dependency>
 
   </dependencies>
-  <version>1.1.7</version>
+  <version>1.1.7-SNAPSHOT</version>
   <build>
      <plugins>
        <plugin>
