--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>lda-top</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>y</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda</name>
-  <version>1.1.8</version>
+  <version>1.1.9-SNAPSHOT</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
