--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -11,11 +11,10 @@
 
 	<groupId>com.epimorphics.lda</groupId>
 	<artifactId>elda-system-tests</artifactId>
+	<packaging>pom</packaging>
 	<name>elda-system-tests</name>
 
 	<dependencies>
-
-
 
 		<dependency>
 			<groupId>com.epimorphics.lda</groupId>
@@ -23,9 +22,24 @@
 			<version>${project.version}</version>
 			<type>war</type>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<version>1.1.9-SNAPSHOT</version>
 	<build>
+
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
@@ -38,7 +52,7 @@
 
 						<zipUrlInstaller>
 							<url>http://apache.favoritelinks.net/tomcat/tomcat-6/v6.0.32/bin/apache-tomcat-6.0.32.zip
-					</url>
+							</url>
 						</zipUrlInstaller>
 					</container>
 					<configuration>
@@ -53,13 +67,65 @@
 								<artifactId>elda-standalone</artifactId>
 								<type>war</type>
 								<properties>
-								    <context>elda</context>
+									<context>elda</context>
 								</properties>
+								<pingURL>http://localhost:9090/elda</pingURL>
+								<pingTimeout>60000</pingTimeout>
 							</deployable>
 						</deployables>
 					</configuration>
 				</configuration>
+				<executions>
+					<execution>
+						<id>start-container</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+						<configuration>
+							<deployer>
+								<deployables>
+								</deployables>
+							</deployer>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-container</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
