--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -47,6 +48,7 @@
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
 				<configuration>
+				    <skip>${skip-integration-test}</skip>
 					<container>
 						<containerId>tomcat6x</containerId>
 
@@ -140,6 +142,9 @@
 						<goals>
 							<goal>test</goal>
 						</goals>
+						<configuration>
+						    <skipTests>${skip-integration-test}</skipTests>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
