--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -79,6 +79,7 @@
 						</deployables>
 					</configuration>
 				</configuration>
+				<version>1.1.1</version>
 				<executions>
 					<execution>
 						<id>start-container</id>
@@ -106,6 +107,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -135,6 +137,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.9</version>
 				<executions>
 					<execution>
 						<id>integration-test</id>
